# smartagg-builder

./: .drone.yml  .gitignore  Dockerfile  README.md  config.yaml.example  pyproject.toml  setup.cfg
deploy/k8s/: kube_config.yaml  kube_cron.yaml  kustomization.yaml  secrets.example.yaml
smartagg_builder/: builder.py  cli.py  config.py
tests/: test_builder.py
