[tool.poetry]
name = "smartagg-builder"
version = "0.1.0"
description = "A tool to generate CARTO named maps derived from BUILDER templates, adding smart aggregation metadata"
authors = ["Jorge Sanz <jsanz@carto.com>"]

[tool.poetry.scripts]
sb = "smartagg_builder.cli:cli"

[tool.poetry.dependencies]
python = "^3.6"
carto = "^1.4"
PyYAML = "^5.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.0"
pylint = "^2.3"
flake8 = "^3.7"
pytest = "^4.5"
pdoc3 = "^0.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

